feat: add swag doc for create and delete post
